# Despattern

./: README.md
UndoRedo/: BaseCommand.h  BaseCommandManager.h  BaseCommandReceiver.h  CMakeLists.txt  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h  Factory.h  MacroCommand.cpp  MacroCommand.h  PrintCommand.cpp  PrintCommand.h  Singleton.h  main.cpp
UndoRedo/Context/: AbstractUndoableEdit.cpp  AbstractUndoableEdit.h  CompoundEdit.cpp  CompoundEdit.h  UndoManager.cpp  UndoManager.h  UndoableEdit.h
UndoRedo/SimpleReality/: CommandHistoryManager.cpp  CommandHistoryManager.h  CutCommand.cpp  CutCommand.h  DelCommand.cpp  DelCommand.h  ICommadManager.h  ICommand.h
composite/: CMakeLists.txt  Directory.cpp  Directory.h  Entry.h  File.cpp  File.h  FileException.h  State.h  main.cpp
